--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,4 +1,20 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: profiles
+#
+#  id          :integer          not null, primary key
+#  accountname :string
+#  birthday    :date
+#  gender      :integer
+#  pr          :text
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  user_id     :integer          not null
+#
+# Indexes
+#
+#  index_profiles_on_user_id  (user_id)
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
